# TiledKernel

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
docs/figures/: .$RF_GEMM_Graph.drawio.bkp  .$Shared_GEMM_Graph.drawio.bkp  RF_GEMM_Graph.drawio  Shared_GEMM_Graph.drawio
examples/: edge.cc  rf_graph.cc  shared_graph.cc
include/: access_map.hpp  context.hpp  error_handler.hpp  fractalbuffer.hpp  generator.hpp  id.hpp  mem_level.hpp  microop.hpp  op.hpp  platform.hpp  schedule.hpp  tiledbuffer.hpp  var.hpp
include/graph/: fractaledge.hpp  fractalgraph.hpp  fractalnode.hpp  tilededge.hpp  tiledgraph.hpp  tilednode.hpp
include/kernel/: header.hpp  macro_kernel.hpp
include/kernel/cuda/cute/: load.hpp  sync.hpp
include/type/: data_type.hpp
src/: access_map.cc  context.cc  generator.cc  id.cc  op.cc  tiledbuffer.cc  var.cc
src/graph/: tilededge.cc  tiledgraph.cc  tilednode.cc
src/kernel/cuda/cute/: load.cpp
tests/graph/: test_toposort.cc
